k8s-service-ingress-example/eks_test/ingress_nginx/app-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - name: http
      port: 3000
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - name: http
      port: 3000
      targetPort: 8080
